[package]
name = "block-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "=0.21.0"
rmp-serde = "1.3.0"
rmp = "0.8.14"
serde = "1.0.219"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0", default-features = false }
alloy-primitives = "0.8.22"
alloy-consensus = "0.12.5"
anyhow = "1.0.97"
lz4_flex = "0.11.3"
clap = { version = "4.5.32", features = ["derive", "string"] }
